--- a/client/imports/app/documents/doc-list/doc-list.component.scss
+++ b/client/imports/app/documents/doc-list/doc-list.component.scss
@@ -1,8 +1,8 @@
-//.doc-preview {
-//  white-space: nowrap;
-//  text-overflow: ellipsis;
-//  overflow: hidden;
-//}
+.doc-preview {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 
 .doc-row {
   cursor: pointer;
