--- a/client/imports/app/documents/doc-edit/doc-edit.component.scss
+++ b/client/imports/app/documents/doc-edit/doc-edit.component.scss
@@ -1,6 +1,14 @@
 .doc-header {
-  margin-left: 15px;
   cursor: pointer;
+  display: inline-flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.doc-header > div {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .icon .material-icons {
