add chat and fix navigation after refresh

--- a/client/imports/app/documents/doc-add/doc-add-modal.component.html
+++ b/client/imports/app/documents/doc-add/doc-add-modal.component.html
@@ -1,4 +1,4 @@
 <mat-form-field>
     <input matInput [(ngModel)]="name" placeholder="Название документа">
 </mat-form-field>
-<button mat-raised-button (click)="createDocument()">Создать</button>
+<button mat-raised-button (click)="createDocument()" [disabled]="!name">Создать</button>
