--- a/client/imports/app/layout/header/header.component.scss
+++ b/client/imports/app/layout/header/header.component.scss
@@ -3,20 +3,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   padding: 8px 16px;
-  -webkit-box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
-  max-height: 104px;
+  z-index: 10;
+  height: 48px;
 }
 
 :host > div {
@@ -29,6 +25,14 @@
 .logo {
   cursor: pointer;
   float: left;
+  line-height: 40px;
+  display: inline-flex;
+  align-items: center;
+}
+
+.logo button {
+  margin-left: 15px;
+  font-size: 12px;
 }
 
 .user-info {
