--- a/client/imports/app/documents/doc-edit/doc-edit.component.html
+++ b/client/imports/app/documents/doc-edit/doc-edit.component.html
@@ -1,22 +1,20 @@
 <div *loading="!document">
     <div class="doc-header">
-        <div>
-            <h2 (click)="changeEditMode()" *ngIf="!nameEditMode">
-                {{ document.name }}
-                <span class="icon">
-                <mat-icon (click)="changeEditMode()">mode_edit</mat-icon>
-            </span>
-            </h2>
-            <mat-form-field *ngIf="nameEditMode">
-                <input
-                        matInput
-                        [ngModel]="document.name"
-                        (blur)="changeEditMode()"
-                        (change)="onNameChange($event)"
-                        placeholder="Название документа"
-                >
-            </mat-form-field>
+        <div class="name-wrapper" (click)="changeEditMode()" *ngIf="!nameEditMode">
+            <div class="name">{{ document.name }}</div>
+            <span class="icon">
+                    <mat-icon (click)="changeEditMode()">mode_edit</mat-icon>
+                </span>
         </div>
+        <mat-form-field *ngIf="nameEditMode">
+            <input
+                    matInput
+                    [ngModel]="document.name"
+                    (blur)="changeEditMode()"
+                    (change)="onNameChange($event)"
+                    placeholder="Название документа"
+            >
+        </mat-form-field>
 
         <div>
             <button
@@ -34,10 +32,18 @@
     <ckeditor
             #editor
             [ngModel]="document && document.content"
-            [config]="{height: '1000'}"
+            [config]="{height: '700'}"
             [readonly]="false"
             debounce="500"
             (change)="onEditorChange($event)"
     >
     </ckeditor>
+    <app-sidebar [isOpen]="showChat" (isOpenChange)="showChat = false">
+        <app-chat [docId]="document._id"></app-chat>
+    </app-sidebar>
+
+    <app-fab
+            *ngIf="!showChat"
+            (click)="showChat = !showChat"
+    ></app-fab>
 </div>
