--- a/client/imports/app/documents/chat/chat.component.html
+++ b/client/imports/app/documents/chat/chat.component.html
@@ -1,4 +1,4 @@
-<app-messages [messages]="messages | async" [users]="users"></app-messages>
+<app-messages cdk-scrollable [messages]="messages | async" [users]="users"></app-messages>
 <div class="new-message">
     <mat-form-field class="full-width-input">
         <textarea
