--- a/client/styles.css
+++ b/client/styles.css
@@ -14,7 +14,7 @@ my-app {
     flex-direction: column;
     position: absolute;
     top: 64px;
-    height: 100%;
+    height: calc(100vh - 64px);
     min-height: 1000px;
     bottom: 0;
     left: 0;
